# restful

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_bot.py  test_ext.py
examples/: bot.py
examples/exts/: cog.py  my_ext.py
interactions/ext/api/: __init__.py  main.py
interactions/ext/fastapi/: __init__.py  main.py
interactions_restful/: __init__.py  _fastapi.py  _flask.py  abc.py  decorators.py  extension.py  manager.py
interactions_restful/backends/: fast_api.py  fastapi.py  flask_api.py  quart.py
