[tool.black]
exclude = '/(\.eggs|\.git|\.mypy_cache|\.venv.*|_build|build|dist)/'
line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.poetry]
name = "interactions-restful"
version = "2.0.0"
description = "A library for interactions.py allowing runtime API structures"
authors = ["Damego <damego.dev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py-interactions = "^5.0.0"

[tool.poetry.group.fastapi]
optional = true
dependencies = {"fastapi" = "^0.92.0"}

[tool.poetry.group.quart]
optional = true
dependencies = {"quart" = "^0.15.0"}

[tool.poetry.group.uvicorn]
optional = true
dependencies = {"uvicorn" = "^0.15.0"}

[tool.poetry.group.hypercorn]
optional = true
dependencies = {"hypercorn" = "^0.14.0"}

[tool.poetry.group.daphne]
optional = true
dependencies = {"daphne" = "^4.0.0"}

[build-system]
requires = [
    "setuptools",
    "tomli",
]
build-backend = "setuptools.build_meta"
